# services

./: .gitignore  .pylintrc  .readthedocs.yml  Makefile  README.md  pyproject.toml
docs/: conf.py  databases.md  index.rst  references.md  release.md  requirements.txt
example/: alembic.ini
example/example/: db.py  managers.py  models.py  tasks.py  users_models.py  views.py  web.py
example/example/api/: example.py  users.py
example/example/commands/: shell.py  users.py
example/example/migrations/: env.py
example/example/templates/: _layout.html  index.html
example/front/: package.json  vite.config.js
example/server_conf/: settings.py
scripts/: postgresql.sh  psql  update_versions.sh
services/: __about__.py  __init__.py  accept.py  base.py  cli.py  cli_project.py  conf.py  cookies.py  db_web.py  defaults.py  errors.py  global_settings.py  init_script.py  jt.py  jtemplates.py  models.py  secrets.py  server.py  shortcuts.py  storage.py  types.py  users.py  utils.py  workers.py
services/commands/: __init__.py  common.py  db.py  manager.py  services.py  tasks.py  tokens.py  users.py  web.py
services/db/: __init__.py  common.py  helpers.py  managers.py  managers2.py  migration.py  mixins.py  nosync.py  pages.py  plugin.py  pragmas.py  psql_search.py  secrets.py  sqlhelper.py  sync.py  types.py  utils.py  web.py
services/db/ext/: utils.py
services/errors/: __init__.py  web.py
services/ext/: backends.py  google.py
services/ext/sql/: workers.py
services/files/: _layout.default.html  _layout.vite.html  index.html  login.html  settings.py
services/files/alembic/: env.py
services/files/app/: api_bp.py  db.py  managers.py  models.py  tasks.py  users_bp.py  users_bp2.py  users_models.py  views.py  views_by_app.py  web.py  webview_bp.py
services/files/app/commands/: shell.py  users.py
services/security/: __init__.py  auth_bp.py  authentication.py  base.py  base2.py  jwtauth.py  manager.py  memory_store.py  models.py  redis_store.py  redis_tokens.py  scopes.py  secrets.py  sessionauth.py  sql_store.py  sql_tokens.py  types.py  users_mg.py  utils.py  web.py
services/security2/: __init__.py  base.py  jwtauth.py  memory_store.py  redis_store.py  sql_store.py  web.py
services/templates/: html.py  render.py  settings.py  simple_tags.py  static.py  vite.py  web.py
services/templates/alembic/: env.py
services/templates/app/: alembic.ini  db.py  migrate.py  models.py  users_bp.py  views_bp.py  web.py  web_init.py
services/users/: __init__.py  base.py  errors.py  managers.py  models.py  types.py  users_bp.py  web.py
services/users2/: __init__.py  base.py  models.py
tests/: common.py  conftest.py  test_accept.py  test_managers2.py
