[tool.poetry]
name = "ai-services"
version = "0.3.0"
description = "A simple web framework based on Sanic"
authors = ["nuxion <nuxion@gmail.com>"]
packages = [
   { include = "services"},
]
homepage = "https://github.com/nuxion/services"
repository = "https://github.com/nuxion/services"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sanic = {version = "^22.6.0", extras = ["ext"]}
pydantic = "^1.9.1"
PyJWT = "^2.4.0"
rich = "^12.5.1"
cryptography = "^37.0.4"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
Jinja2 = "^3.1.2"

[tool.poetry.scripts]
srv = "services.cli:cli"
create-srv-project = "services.cli_project:create_service_project"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.4"
pylint = "^2.10.2"
isort = "^5.9.3"
autopep8 = "^1.5.7"
matplotlib = "^3.4.3"
types-requests = "^2.25.9"
types-redis = "^3.5.11"
openpyxl = "^3.0.9"
types-ujson = "^4.2.0"
types-dateparser = "^1.0.8"
types-pytz = "^2021.3.1"
memory-profiler = "^0.60.0"
pytest-asyncio = "^0.16.0"
black = "^22.1.0"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
redislite = "^6.0.674960"
factory-boy = "^3.2.1"
pre-commit = "^2.17.0"
tox = "^3.24.5"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
sphinx-rtd-theme = "^1.0.0"
sanic-testing = "^0.8.2"
pydeps = "^1.10.18"
aiosqlite = "^0.17.0"
ipython = "^8.4.0"
