[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-services"
description = '"A simple web framework based on Sanic"'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "nuxion", email = "nuxion@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click~=8.1.3",
    "SQLAlchemy~=1.4.46",
    "alembic~=1.9.3",
    "Jinja2~=3.1.2",
    "rich~=12.5.1",
    "cryptography~=39.0.1",
    "PyJWT~=2.6.0",
    "pydantic~=1.10.4",
    "sanic~=22.12.0",
    "sanic-ext~=22.12.0",
    "redis~=4.5.1"
    ]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/nuxion/services#readme"
Issues = "https://github.com/nuxion/services/issues"
Source = "https://github.com/nuxion/services"

[project.scripts]
srv = "services.cli:cli"
create-srv-project = "services.cli_project:create_service_project"

[tool.hatch.version]
path = "services/__about__.py"

[tool.hatch.build]
artifacts = [
  "*.ini",
  "*.html",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pylint",
  "isort",
  "autopep8",
  "sqlalchemy-stubs",
  "ipython",
  "Sphinx~=5.3.0",
  "sphinx-autobuild",
  "sphinx-rtd-theme",
  "aiosqlite~=0.18.0"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=services --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "services/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
