[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-services"
description = '"A simple web framework based on Sanic"'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "nuxion", email = "nuxion@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click~=8.1.3",
    "Jinja2>=3.1",
    "rich>=12",
    "cryptography>=39.0.1",
    "PyJWT>=2.6.0",
    "pydantic~=1.10.7",
    "sanic~=23.3.0",
    "sanic-ext~=23.3.0",
    "redis~=4.5.1",
    "itsdangerous~=2.1.2",
    "aiofiles<23,>=22.1.0", # needed for jupyterlab
    ]
dynamic = ["version"]

[project.optional-dependencies]
google = [
    "smart-open==6",
    "google-cloud-storage==2"
]

sql = [
    "SQLAlchemy>=2.0.7",
    "alembic>=1.10.3",
]


[project.urls]
Documentation = "https://github.com/nuxion/services#readme"
Issues = "https://github.com/nuxion/services/issues"
Source = "https://github.com/nuxion/services"

[project.scripts]
srv = "services.cli:cli"
create-srv-project = "services.cli_project:create_service_project"

[tool.hatch.version]
path = "services/__about__.py"

[tool.hatch.build]
artifacts = [
  "*.ini",
  "*.html",
  "*.mako",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pylint~=2.16.2",
  "isort~=5.12.0",
  "black~=23.1.0",
  "mypy~=1.0.1",
  "sqlalchemy-stubs",
  "ipython",
  "Sphinx~=5.3.0",
  "sphinx-autobuild",
  "sphinx-rtd-theme",
  "aiosqlite~=0.18.0",
  "types-redis",
  "types-aiofiles",
  "httpx",
  "psycopg[binary,pool]~=3.1.8"
]

features = [
   "google",
   "sql"
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=services --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "services/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
# Custom added
[tool.isort]
profile = "black"

[tool.black]
line-length = 88
